syntax = "proto3";

option csharp_namespace = "CalculatorServer";

service Calculator {
  rpc Square (CalculationRequest) returns (CalculationResponse);
  rpc Cube (CalculationRequest) returns (CalculationResponse);
  rpc SlowMultiply (MultiplyRequest) returns (CalculationResponse);
}

message CalculationRequest {
  int32 number = 1;
  map<string, int32> vectorClock = 2;
}

message MultiplyRequest {
  int32 number1 = 1;
  int32 number2 = 2;
  map<string, int32> vectorClock = 3;
}

message CalculationResponse {
  int32 result = 1;
  bool isSuccess = 2;
  string errorMessage = 3;
  map<string, int32> vectorClock = 4;
}
